// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the BaseLinkButton matches the snapshot 1`] = `
<a
  className="sc-iwsKbI giSiXQ sc-dnqmqq kaJYpi sc-htoDjs gwrbIm sc-gzVnrw eFsQEO sc-bZQynM hUnLvZ"
>
  LinkButtonValue
</a>
`;

exports[`the LinkButton matches the snapshot 1`] = `
<a
  className="sc-gZMcBi hXZHGD sc-iwsKbI giSiXQ sc-dnqmqq kaJYpi sc-htoDjs gwrbIm sc-gzVnrw eFsQEO sc-bZQynM hUnLvZ"
>
  LinkButtonValue
</a>
`;
